Sun Sep 19 10:43:31 1999  Jeffrey A Law  (law@cygnus.com)

	* config/tc-hppa.c (struct pa_it): New field "trunc".
	(pa_ip): Hadnle 'h', 'm', '=', '{', and '_' operands.
	(pa_parse_ftest_gfx_completer): New function
	(pa_parse_fp_cnv_format): New function.

	* config/tc-hppa.c (pa_ip): Handle 'X' operand.
	(md_apply_fix): Handle 22bit pc-rel branches.

	* config/tc-hppa.c (pa_ip): Handle 'B' operand.

	* config/tc-hppa.c (pa_ip): Handle 'L' and 'M' operands.

	* config/tc-hppa.c (pa_ip): Handle 'l' operand.

	* config/tc-hppa.c (pa_ip): Handle 'g' operand.

at Sep 18 12:13:28 1999  Jeffrey A Law  (law@cygnus.com)

	* config/tc-hppa.c (md_assemble): Fix dwarf2 line handling.
	(pa_ip): Handle 'fX'.

Sat Sep 18 12:13:28 1999  Jeffrey A Law  (law@cygnus.com)

        * config/tc-hppa.c (md_assemble): Fix dwarf2 line handling.
        (pa_ip): Handle 'fX'.

Fri Sep 17 11:57:34 1999  Jeffrey A Law  (law@cygnus.com)

	* config/tc-hppa.c (pa_build_unwind_subspace): Do not build
	unwinds unless the function is in the text space.
	(pa_type_args): Set BSF_FUNCTION for an exproted data symbol.

Wed Sep 15 05:14:32 1999  Jeffrey A Law  (law@cygnus.com)

	* config/tc-hppa.c (pa_ip): Move dwarf2 stuff from here.
	(md_assemble): To here.  Tweak address generation.

	* config/tc-hppa.c: Include dwarf2dbg.h if OBJ_ELF.  Declare
	debug_line.
	(md_pseudo_table): Add .file and .line pseudo-ops for OBJ_ELF.
	(md_assemble): Call dwarf2_where for OBJ_ELF.
	(pa_ip): Call dwarf2_gen_line_info for OBJ_ELF.
	(pa_end_of_source): New function.
	* tc-hppa.h (md_end): Define for OBJ_ELF.

1999-09-14  Michael Meissner  <meissner@cygnus.com>

	* configure.in (Canonicalization of target names): Remove adding
	${CONFIG_SHELL} in front of $ac_config_sub, since autoconfig 2.14
	generates $ac_config_sub with a ${CONFIG_SHELL} already.
	* configure: Regenerate.

1999-09-14  Donn Terry  <donn@interix.com>

	* config/te-interix.h (GLOBAL_OFFSET_TABLE_NAME): Define.
